--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "demo": "vite --open"
+    "start": "vite --open"
   },
   "dependencies": {
     "react": "17.0.2",
@@ -8,6 +8,7 @@
     "ts-node": "10.3.0"
   },
   "devDependencies": {
+    "@emotion/css": "^11.9.0",
     "@types/node": "16.11.0",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
