--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "ts-node": "10.3.0"
   },
   "devDependencies": {
-    "@emotion/css": "^11.9.0",
+    "@emotion/css": "11.9.0",
     "@types/node": "16.11.0",
     "@types/react": "17.0.30",
     "@types/react-dom": "17.0.9",
     "@vitejs/plugin-react": "1.0.4",
-    "typescript": "4.4.4",
+    "typescript": "5.3.3",
     "vite": "2.6.7"
   }
 }
